--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: badal.geek@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Tech blog.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://badalgeek.github.io" # the base hostname & protocol for your site
+url: "http://badal.io" # the base hostname & protocol for your site
 twitter_username: badal.ism
 github_username:  badalgeek
 authorName: Badal Singh
